assets/css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

/* Setup e utilidades */

:root {
    font-size: 14px;
    line-height: 18px;
    font-family: 'Poppins', Helvetica, sans-serif;
    /* Variáveis para cores */
    --clr-primaty: #e02d2d;
    --clr-black: #191919;
    --clr-white: #eef2f5;
    color: var(--clr-black);
}

.btn {
    display: flex;
    align-items: center;
    gap: 0.5rem;
    background-color: var(--clr-primaty);
    width: fit-content;
    padding: 12px 18px;
    border-radius: 6px;
    color: var(--clr-white);
    font-size: 14px;
    text-decoration: none;
    transition: transform 250ms;
}

.btn:hover {
    transform: scale(1.02);
    opacity: 0.9;
}

.w-100 {
    width: 100%;
}

.bg-dark {
    background-color: var(--clr-black);
}

section h2 {
    font-size: 24px;
    font-weight: 500;
    line-height: 150%;
    text-transform: uppercase;
}

section {
    display: flex;
    flex-direction: column;
    padding: 2rem 1.5rem;
}

@media screen and (min-width: 1024px) {
    section {
        max-width: 1180px;
        margin: 0 auto;
    }
}

/* Header */

header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    background-color: var(--clr-black);
    color: var(--clr-white);
    padding: 1rem 1.5rem;
    max-width: 1180px;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
    margin: 0 auto;
}

header nav {
    display: none;
    align-items: center;
    gap: 1.5rem;
}

header nav a {
    color: var(--clr-white);
    font-size: 16px;
    font-weight: 500;
    text-decoration: none;
}

header h1 {
    font-size: 22px;
    font-weight: 500;
}

.nav-links {
    transition: transform 500ms;
}

.nav-links:hover {
    transform: scale(1.01);
    opacity: 0.9;
}

@media screen and (min-width: 1024px) {
    header nav {
        display: flex;
    }
}

/* Home */

#home {
    padding: 0;
    height: 706px;
    justify-content: center;
}

.home-cta {
    display: flex;
    flex-direction: column;
    gap: 2.5rem;
    height: 400px;
    padding-inline: 1.5rem;
    justify-content: center;
    background-image: url('/assets/img/DarthMobile-IMG.png');
    background-repeat: no-repeat;
    background-position: rem;
    background-size: 300px;
}

#home > img {
    display: none;
}

.home-heading {
    flex-direction: column;
}

.home-heading > h1 {
    font-size: 24px;
    line-height: 150%;
    font-weight: 500;
    margin: 0;
}

.home-heading > p {
    line-height: 150%;
    margin: 0;
}

@media screen and (min-width: 1024px) {
    #home {
        flex-direction: row;
        align-items: center;
        justify-content: space-between;
    }

    #home > img {
        display: block;
        width: 444px;
        height: 444px;
    }

    .home-cta {
        background: none;
    }
}

/* Sobre */

#sobre {
    gap: 1rem;
    background-color: var(--clr-black);
    color: var(--clr-white);
}

.sobre-links {
    display: flex;
    flex-wrap: wrap;
    width: 100%;
    gap: 1.5rem;
}

.mobile-sobre > img {
    width: 100%;
    border-radius: 12px;
}

.desktop-sobre {
    display: none;
}

.desktop-sobre img {
    border-radius: 12px;
    max-width: 460px;
}

.sobre-left {
    display: flex;
    flex-direction: column;
    gap: 1.5rem;
}

@media screen and (min-width: 1024px) {
    .mobile-sobre {
        display: none;
    }

    .desktop-sobre {
        display: flex;
        gap: 92px;
    }

    .desktop-sobre h2 {
        margin: 0;
    }
}

/* Projetos */

#projetos {
    gap: 1.5rem;
}

.cards-wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1rem;
}

.card {
    background-color: var(--clr-black);
    color: var(--clr-white);
    padding: 1.25rem;
    border-radius: 10px;
    max-width: 250px;
}

.card > img {
    width: 100%;
    border-radius: 6px;
}

.card > h3 {
    font-size: 18px;
    font-weight: 500;
}

@media screen and (min-width: 1024px) {
    #projetos {
        align-items: center;
    }

    .cards-wrapper {
        flex-direction: row;
        justify-content: center;
        flex-wrap: wrap;
    }
}

/* Serviços e Conhecimentos */

#servicos {
    display: flex;
    flex-direction: column;
    gap: 40px;
    background-color: var(--clr-black);
    color: var(--clr-white);
}

.base-list {
    display: flex;
    flex-wrap: wrap;
    list-style: none;
    margin: 0;
    padding: 0;
}

.base-list > li {
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: var(--clr-primaty);
    padding: 16px;
    font-size: 18px;
    font-weight: 600;
    border-radius: 3px;
}

.servicos-list {
    gap: 1rem;
}

.conhecimentos-list {
    flex-wrap: wrap;
    gap: 20px;
}

.conhecimentos-list > li {
    width: 72px;
    height: 72px;
}

.tech-list {
    transition: transform 500ms;
}

.tech-list:hover {
    transform: translateY(-3%);
}

@media screen and (min-width: 1024px) {
    #servicos {
        flex-direction: row;
    }

    #servicos > div {
        flex-basis: 50%;
    }

    .servicos-list {
        flex-direction: column;
    }

    .servicos-list > li {
        justify-content: start;
        max-width: 320px;
        height: 64px;
    }
}

/* Contato */

#contato {
    gap: 3rem;
    padding-block: 4rem;
}

#contato > h2 {
    margin: 0;
}

#contato > ul {
    display: flex;
    flex-direction: column;
    margin: 0;
    padding: 0;
    gap: 0.75rem;
    list-style: none;
}

#contato > ul > li {
    display: flex;
    align-items: center;
    gap: .5rem;
    font-size: 18px;
    font-weight: 500;
}

.icon-wrapper {
    display: flex;
    justify-content: center;
    width: 2rem;
}

#contato a {
    color: var(--clr-black);
    text-decoration: none;
}

#contato > cite {
    text-transform: uppercase;
    font-size: 18px;
    font-weight: 500;
    font-style: normal;
}

@media screen and (min-width: 1024px) {
    #contato {
        align-items: center;
    }
}

/* Footer */

footer {
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: var(--clr-primaty);
    padding-block: 1.5rem;
}

footer > a {
    display: flex;
    align-items: center;
    gap: 0.5rem;
    color: var(--clr-black);
    text-decoration: none;
    font-size: 16px;
    font-weight: 300;
}

footer img {
    height: 24px;
}

